[package]
name = "mc2"
version = "0.1.0"
authors = ["Jorge <jorgemg0327@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
geojson= "0.20.1"
reqwest = { version = "0.10", features = ["blocking"] }