[package]
name = "mc2"
version = "0.1.0"
authors = ["Jorge <jorgemg0327@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
geojson= "0.20.1"
reqwest = { version = "0.10", features = ["blocking"] }
xml-rs = "0.8.3"
uuid = { version = "0.8", features = ["serde", "v4"] }
structopt = { version = "0.3", default-features = false }
